udaCity Promises Exercise 2. Update 2.

--- a/Promises/udaCityPromises/Promises2.html
+++ b/Promises/udaCityPromises/Promises2.html
@@ -31,12 +31,14 @@
 
 		  return new Promise(function(resolve) {
 			  function checkState() {
-				console.log('Haha Moment');
+					console.log('loading');
 				  if (document.readyState !== 'loading') {
+					console.log('Haha Moment');
 				    resolve();
 				  }
 				}
 				document.addEventListener('readystatechange', checkState);
+				console.log('test');
 				checkState();
 		  });
 		};
